first stab at estimate_betas

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,7 +69,11 @@ S3method(event_table,convolved_term)
 S3method(event_table,event_term)
 S3method(event_terms,fmri_model)
 S3method(formula,event_term)
+S3method(get_data,fmri_file_dataset)
+S3method(get_data,fmri_mem_dataset)
 S3method(get_formula,fmri_model)
+S3method(get_mask,fmri_file_dataset)
+S3method(get_mask,fmri_mem_dataset)
 S3method(global_onsets,sampling_frame)
 S3method(is_categorical,event_seq)
 S3method(is_categorical,event_term)
@@ -263,6 +267,8 @@ importFrom(lazyeval,f_eval)
 importFrom(lazyeval,f_lhs)
 importFrom(lazyeval,f_rhs)
 importFrom(magrittr,"%>%")
+importFrom(neuroim2,FileBackedNeuroVec)
+importFrom(neuroim2,NeuroVecSeq)
 importFrom(neuroim2,series)
 importFrom(numDeriv,grad)
 importFrom(purrr,imap)
