--- a/NAMESPACE
+++ b/NAMESPACE
@@ -241,6 +241,7 @@ export(to_glt)
 export(trialwise)
 export(unit_contrast)
 export(write_glt)
+import(Matrix)
 import(RANN)
 import(assertthat)
 import(neuroim2)
