--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ S3method(columns,event_seq)
 S3method(columns,event_set)
 S3method(columns,event_term)
 S3method(conditions,afni_hrf_convolved_term)
+S3method(conditions,afni_trialwise_convolved_term)
 S3method(conditions,baseline_model)
 S3method(conditions,convolved_term)
 S3method(conditions,event_model)
@@ -29,6 +30,7 @@ S3method(conditions,event_term)
 S3method(conditions,fmri_model)
 S3method(conditions,fmri_term)
 S3method(construct,afni_hrfspec)
+S3method(construct,afni_trialwise_hrfspec)
 S3method(construct,baselinespec)
 S3method(construct,blockspec)
 S3method(construct,hrfspec)
@@ -133,6 +135,7 @@ export(Ident)
 export(Poly)
 export(afni_hrf)
 export(afni_lm)
+export(afni_trialwise)
 export(amplitudes)
 export(baseline)
 export(baseline_model)
