export get_mask

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -184,6 +184,7 @@ export(gen_hrf_blocked)
 export(gen_hrf_lagged)
 export(gen_hrf_set)
 export(getHRF)
+export(get_mask)
 export(global_onsets)
 export(hrf)
 export(hrf_blocked)
@@ -247,6 +248,7 @@ import(Matrix)
 import(RANN)
 import(assertthat)
 import(neuroim2)
+import(pls)
 import(shiny)
 import(splines)
 importFrom(assertthat,assert_that)
