add rrBLUP to import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -184,6 +184,7 @@ export(gen_hrf_blocked)
 export(gen_hrf_lagged)
 export(gen_hrf_set)
 export(getHRF)
+export(get_data)
 export(get_mask)
 export(global_onsets)
 export(hrf)
@@ -282,6 +283,7 @@ importFrom(purrr,map_dbl)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,partial)
+importFrom(rrBLUP,mixed.solve)
 importFrom(splines,bs)
 importFrom(splines,ns)
 importFrom(stringr,str_trim)
