--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,13 @@ Package: fmrireg
 Type: Package
 Title: R package for the anlysis of fmri data
 Version: 0.0.1
-Date: 2014-04-01
+Date: 2019-12-01
 Authors@R: person("Bradley", "Buchsbaum",, role = c("aut", "cre"), email = "brad.buchsbaum@gmail.com")
 License: GPL (>= 2)
 Maintainer: Bradley Buchsbaum <bbuchsbaum@gmail.com>
 Description: fmrireg is a package for the analysis of fmri image data
 Depends:
-    R (>= 3.0.0),
+    R (>= 3.5.0),
     stats,
     methods,
     abind
@@ -21,7 +21,18 @@ Imports:
     tibble,
     neuroim2,
     purrr,
-    foreach
+    foreach,
+    Matrix,
+    cowplot,
+    dplyr,
+    ggplot2,
+    gmodels,
+    lazyeval,
+    magrittr,
+    pls,
+    rrBLUP,
+    shiny,
+    tidyr
 RoxygenNote: 6.1.1
 Suggests: testthat,
     knitr,
