--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,9 +73,11 @@ S3method(event_terms,fmri_model)
 S3method(formula,event_term)
 S3method(get_data,fmri_file_dataset)
 S3method(get_data,fmri_mem_dataset)
+S3method(get_data,matrix_dataset)
 S3method(get_formula,fmri_model)
 S3method(get_mask,fmri_file_dataset)
 S3method(get_mask,fmri_mem_dataset)
+S3method(get_mask,matrix_dataset)
 S3method(global_onsets,sampling_frame)
 S3method(is_categorical,event_seq)
 S3method(is_categorical,event_term)
@@ -119,6 +121,8 @@ S3method(terms,event_model)
 S3method(terms,fmri_model)
 S3method(to_glt,contrast)
 S3method(write_glt,glt_contrast)
+export("in")
+export(...)
 export(AFNI_HRF)
 export(BSpline)
 export(EV)
@@ -133,10 +137,12 @@ export(HRF_SPMG2)
 export(HRF_SPMG3)
 export(Ident)
 export(Poly)
+export(TODO)
 export(afni_hrf)
 export(afni_lm)
 export(afni_trialwise)
 export(amplitudes)
+export(arg)
 export(baseline)
 export(baseline_model)
 export(baseline_term)
@@ -158,6 +164,7 @@ export(convolve)
 export(convolve_block)
 export(convolve_design)
 export(data_chunks)
+export(deal)
 export(design_env)
 export(design_matrix)
 export(durations)
@@ -181,7 +188,6 @@ export(fmri_rlm)
 export(gen_afni_lm)
 export(gen_hrf)
 export(gen_hrf_blocked)
-export(gen_hrf_lagged)
 export(gen_hrf_set)
 export(getHRF)
 export(get_data)
@@ -193,6 +199,7 @@ export(hrf_bspline)
 export(hrf_gamma)
 export(hrf_gaussian)
 export(hrf_lagged)
+export(hrf_smoothing_kernel)
 export(hrf_spmg1)
 export(hrf_time)
 export(is_categorical)
@@ -244,6 +251,7 @@ export(term_names)
 export(to_glt)
 export(trialwise)
 export(unit_contrast)
+export(with)
 export(write_glt)
 import(Matrix)
 import(RANN)
@@ -277,6 +285,7 @@ importFrom(neuroim2,FileBackedNeuroVec)
 importFrom(neuroim2,NeuroVecSeq)
 importFrom(neuroim2,series)
 importFrom(numDeriv,grad)
+importFrom(proxy,simil)
 importFrom(purrr,imap)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
