--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,8 +121,6 @@ S3method(terms,event_model)
 S3method(terms,fmri_model)
 S3method(to_glt,contrast)
 S3method(write_glt,glt_contrast)
-export("in")
-export(...)
 export(AFNI_HRF)
 export(BSpline)
 export(EV)
@@ -137,12 +135,10 @@ export(HRF_SPMG2)
 export(HRF_SPMG3)
 export(Ident)
 export(Poly)
-export(TODO)
 export(afni_hrf)
 export(afni_lm)
 export(afni_trialwise)
 export(amplitudes)
-export(arg)
 export(baseline)
 export(baseline_model)
 export(baseline_term)
@@ -164,7 +160,6 @@ export(convolve)
 export(convolve_block)
 export(convolve_design)
 export(data_chunks)
-export(deal)
 export(design_env)
 export(design_matrix)
 export(durations)
@@ -188,6 +183,7 @@ export(fmri_rlm)
 export(gen_afni_lm)
 export(gen_hrf)
 export(gen_hrf_blocked)
+export(gen_hrf_lagged)
 export(gen_hrf_set)
 export(getHRF)
 export(get_data)
@@ -251,7 +247,6 @@ export(term_names)
 export(to_glt)
 export(trialwise)
 export(unit_contrast)
-export(with)
 export(write_glt)
 import(Matrix)
 import(RANN)
