--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(blocklens,sampling_frame)
 S3method(cells,convolved_term)
 S3method(cells,event_factor)
 S3method(cells,event_term)
+S3method(coef,fmri_latent_lm)
 S3method(coef,fmri_lm)
 S3method(columns,event_basis)
 S3method(columns,event_matrix)
@@ -73,10 +74,12 @@ S3method(event_terms,fmri_model)
 S3method(formula,event_term)
 S3method(get_data,fmri_file_dataset)
 S3method(get_data,fmri_mem_dataset)
+S3method(get_data,latent_dataset)
 S3method(get_data,matrix_dataset)
 S3method(get_formula,fmri_model)
 S3method(get_mask,fmri_file_dataset)
 S3method(get_mask,fmri_mem_dataset)
+S3method(get_mask,latent_dataset)
 S3method(get_mask,matrix_dataset)
 S3method(global_onsets,sampling_frame)
 S3method(is_categorical,event_seq)
@@ -114,6 +117,8 @@ S3method(shortnames,event_model)
 S3method(shortnames,matrix_term)
 S3method(split_by_block,sampling_frame)
 S3method(split_onsets,event_term)
+S3method(standard_error,fmri_lm)
+S3method(stats,fmri_lm)
 S3method(term_matrices,fmri_model)
 S3method(term_names,event_model)
 S3method(terms,baseline_model)
@@ -176,6 +181,7 @@ export(event_terms)
 export(event_variable)
 export(exec_strategy)
 export(fmri_dataset)
+export(fmri_latent_lm)
 export(fmri_lm)
 export(fmri_mem_dataset)
 export(fmri_model)
@@ -228,6 +234,7 @@ export(print.event_term)
 export(print.fmri_dataset)
 export(print.fmri_model)
 export(print.fmri_term)
+export(print.latent_dataset)
 export(print.matrix_dataset)
 export(print.poly_contrast_spec)
 export(print.regressor)
@@ -287,10 +294,11 @@ importFrom(purrr,map_dbl)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,partial)
+importFrom(robustbase,lmrob)
+importFrom(robustbase,lmrob.control)
 importFrom(rrBLUP,mixed.solve)
 importFrom(splines,bs)
 importFrom(splines,ns)
 importFrom(stringr,str_trim)
-importFrom(tibble,as_data_frame)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,gather)
