add fmri_lm_fit function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -183,6 +183,7 @@ export(exec_strategy)
 export(fmri_dataset)
 export(fmri_latent_lm)
 export(fmri_lm)
+export(fmri_lm_fit)
 export(fmri_mem_dataset)
 export(fmri_model)
 export(fmri_rlm)
