--- a/NAMESPACE
+++ b/NAMESPACE
@@ -213,6 +213,7 @@ export(matrix_dataset)
 export(matrix_term)
 export(nbasis)
 export(nuisance)
+export(one_against_all_contrast)
 export(onsets)
 export(pair_contrast)
 export(pairwise_contrasts)
