--- a/NAMESPACE
+++ b/NAMESPACE
@@ -281,6 +281,7 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
 importFrom(gmodels,estimable)
+importFrom(iterators,icount)
 importFrom(lazyeval,f_eval)
 importFrom(lazyeval,f_lhs)
 importFrom(lazyeval,f_rhs)
