--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,7 +47,7 @@ S3method(contrast_weights,pair_contrast_spec)
 S3method(contrast_weights,poly_contrast_spec)
 S3method(contrast_weights,unit_contrast_spec)
 S3method(convolve,event_term)
-S3method(data_chunks,fmri_dataset)
+S3method(data_chunks,fmri_file_dataset)
 S3method(data_chunks,fmri_mem_dataset)
 S3method(data_chunks,matrix_dataset)
 S3method(design_matrix,baseline_model)
