estimate_betas updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -170,6 +170,7 @@ export(design_matrix)
 export(durations)
 export(elements)
 export(estcon)
+export(estimate_betas)
 export(evaluate)
 export(event_basis)
 export(event_factor)
@@ -265,6 +266,7 @@ import(pls)
 import(shiny)
 import(splines)
 importFrom(assertthat,assert_that)
+importFrom(care,slm)
 importFrom(cowplot,plot_grid)
 importFrom(dplyr,do)
 importFrom(dplyr,group_by)
