--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ S3method(elements,event_matrix)
 S3method(elements,event_seq)
 S3method(elements,event_term)
 S3method(estcon,contrast)
+S3method(estimate_betas,matrix_dataset)
 S3method(evaluate,HRF)
 S3method(evaluate,hrfspec)
 S3method(evaluate,null_regressor)
@@ -288,6 +289,8 @@ importFrom(lazyeval,f_eval)
 importFrom(lazyeval,f_lhs)
 importFrom(lazyeval,f_rhs)
 importFrom(magrittr,"%>%")
+importFrom(mgcv,gam)
+importFrom(mgcv,s)
 importFrom(neuroim2,FileBackedNeuroVec)
 importFrom(neuroim2,NeuroVecSeq)
 importFrom(neuroim2,series)
