added "covariate" mechanism for unconvolvd model terms

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ S3method(construct,afni_hrfspec)
 S3method(construct,afni_trialwise_hrfspec)
 S3method(construct,baselinespec)
 S3method(construct,blockspec)
+S3method(construct,covariatespec)
 S3method(construct,hrfspec)
 S3method(construct,nuisancespec)
 S3method(construct,trialwisespec)
@@ -165,6 +166,7 @@ export(contrast_weights)
 export(convolve)
 export(convolve_block)
 export(convolve_design)
+export(covariate)
 export(data_chunks)
 export(design_env)
 export(design_matrix)
@@ -190,6 +192,7 @@ export(fmri_mem_dataset)
 export(fmri_model)
 export(fmri_rlm)
 export(gen_afni_lm)
+export(gen_empirical_hrf)
 export(gen_hrf)
 export(gen_hrf_blocked)
 export(gen_hrf_lagged)
