--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,32 @@
 template:
   params:
     bootswatch: cerulean
+    
+    
+url: https://pkgdown.r-lib.org
+
+home:
+  title: Regression analaysis for Functional Magnetic Resonance imaging (fMRI) data
+authors:
+  Bradley Buchsbaum:
+    href: https://linguamemoria.org
+
+development:
+  mode: auto    
+  
+articles:
+- title: fMRI regression analysis
+  navbar: ~
+  contents:
+  - Overview
+  - a_01_hemodynamic_response
+  - a_02_regressor
+  - a_03_baseline_model
+  - a_04_event_models
+  - a_05_contrasts
+  - a_06_afni
+
+
 reference:
 - title: hemodynamic response functions
   desc: >
