--- a/NAMESPACE
+++ b/NAMESPACE
@@ -267,8 +267,8 @@ import(neuroim2)
 import(pls)
 import(shiny)
 import(splines)
+import(stats)
 importFrom(assertthat,assert_that)
-importFrom(care,slm)
 importFrom(cowplot,plot_grid)
 importFrom(dplyr,do)
 importFrom(dplyr,group_by)
@@ -284,6 +284,7 @@ importFrom(ggplot2,geom_line)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
+importFrom(glmnet,glmnet)
 importFrom(gmodels,estimable)
 importFrom(iterators,icount)
 importFrom(lazyeval,f_eval)
@@ -296,7 +297,7 @@ importFrom(neuroim2,FileBackedNeuroVec)
 importFrom(neuroim2,NeuroVecSeq)
 importFrom(neuroim2,series)
 importFrom(numDeriv,grad)
-importFrom(proxy,simil)
+importFrom(pls,plsr)
 importFrom(purrr,imap)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
@@ -311,3 +312,4 @@ importFrom(splines,ns)
 importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,gather)
+importFrom(utils,combn)
