--- a/NAMESPACE
+++ b/NAMESPACE
@@ -269,6 +269,7 @@ import(shiny)
 import(splines)
 import(stats)
 importFrom(assertthat,assert_that)
+importFrom(care,slm)
 importFrom(cowplot,plot_grid)
 importFrom(dplyr,do)
 importFrom(dplyr,group_by)
