--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ S3method(elements,event_matrix)
 S3method(elements,event_seq)
 S3method(elements,event_term)
 S3method(estcon,contrast)
+S3method(estimate_betas,fmri_dataset)
 S3method(estimate_betas,matrix_dataset)
 S3method(evaluate,HRF)
 S3method(evaluate,hrfspec)
