--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ S3method(design_matrix,convolved_term)
 S3method(design_matrix,event_model)
 S3method(design_matrix,event_model_spec)
 S3method(design_matrix,event_term)
+S3method(design_matrix,fmri_model)
 S3method(design_matrix,matrix_term)
 S3method(durations,regressor)
 S3method(elements,event_basis)
@@ -156,7 +157,6 @@ export(block)
 export(block_term)
 export(blockids)
 export(blocklens)
-export(build_afni_stims)
 export(cells)
 export(columns)
 export(conditions)
@@ -255,7 +255,6 @@ export(shortnames)
 export(single_trial_regressor)
 export(split_by_block)
 export(split_onsets)
-export(term_indices)
 export(term_names)
 export(to_glt)
 export(trialwise)
