allow TR to vary by run in sampling_frame

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -263,6 +263,7 @@ export(write_glt)
 import(Matrix)
 import(RANN)
 import(assertthat)
+import(memoise)
 import(neuroim2)
 import(pls)
 import(shiny)
