--- a/NAMESPACE
+++ b/NAMESPACE
@@ -209,6 +209,7 @@ export(hrf_lagged)
 export(hrf_smoothing_kernel)
 export(hrf_spmg1)
 export(hrf_time)
+export(hrfspec)
 export(is_categorical)
 export(is_continuous)
 export(levels)
@@ -255,6 +256,7 @@ export(shortnames)
 export(single_trial_regressor)
 export(split_by_block)
 export(split_onsets)
+export(stats)
 export(term_names)
 export(to_glt)
 export(trialwise)
