make event_model generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,8 @@ S3method(evaluate,hrfspec)
 S3method(evaluate,null_regressor)
 S3method(evaluate,regressor)
 S3method(evaluate,single_trial_regressor)
+S3method(event_model,formula)
+S3method(event_model,list)
 S3method(event_table,convolved_term)
 S3method(event_table,event_term)
 S3method(event_terms,fmri_model)
