--- a/NAMESPACE
+++ b/NAMESPACE
@@ -304,6 +304,7 @@ importFrom(neuroim2,NeuroVecSeq)
 importFrom(neuroim2,series)
 importFrom(numDeriv,grad)
 importFrom(pls,plsr)
+importFrom(pracma,conv)
 importFrom(purrr,imap)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
