--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ S3method(evaluate,single_trial_regressor)
 S3method(event_model,formula)
 S3method(event_model,list)
 S3method(event_table,convolved_term)
+S3method(event_table,covariate_convolved_term)
 S3method(event_table,event_term)
 S3method(event_terms,fmri_model)
 S3method(formula,event_term)
@@ -107,6 +108,7 @@ S3method(longnames,matrix_term)
 S3method(nbasis,AFNI_HRF)
 S3method(nbasis,HRF)
 S3method(nbasis,convolved_term)
+S3method(nbasis,covariate_convolved_term)
 S3method(nbasis,hrfspec)
 S3method(nbasis,regressor)
 S3method(onsets,convolved_term)
@@ -116,7 +118,6 @@ S3method(parent_terms,event_term)
 S3method(predict,BSpline)
 S3method(predict,Ident)
 S3method(predict,Poly)
-S3method(read_confounds,bids_source)
 S3method(run,afni_lm_spec)
 S3method(samples,sampling_frame)
 S3method(shortnames,convolved_term)
@@ -154,7 +155,6 @@ export(baseline)
 export(baseline_model)
 export(baseline_term)
 export(baseline_terms)
-export(bids_source)
 export(block)
 export(block_term)
 export(blockids)
@@ -248,7 +248,6 @@ export(print.matrix_dataset)
 export(print.poly_contrast_spec)
 export(print.regressor)
 export(print.sampling_frame)
-export(read_confounds)
 export(read_fmri_config)
 export(regressor)
 export(run)
