--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ S3method(elements,event_seq)
 S3method(elements,event_term)
 S3method(estcon,contrast)
 S3method(estimate_betas,fmri_dataset)
+S3method(estimate_betas,latent_dataset)
 S3method(estimate_betas,matrix_dataset)
 S3method(evaluate,HRF)
 S3method(evaluate,hrfspec)
