further developments with latent_lm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,7 +126,9 @@ S3method(shortnames,event_model)
 S3method(shortnames,matrix_term)
 S3method(split_by_block,sampling_frame)
 S3method(split_onsets,event_term)
+S3method(standard_error,fmri_latent_lm)
 S3method(standard_error,fmri_lm)
+S3method(stats,fmri_latent_lm)
 S3method(stats,fmri_lm)
 S3method(term_matrices,fmri_model)
 S3method(term_names,event_model)
@@ -283,6 +285,8 @@ importFrom(dplyr,ungroup)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(forecast,Arima)
+importFrom(forecast,auto.arima)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,facet_wrap)
