--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(amplitudes,regressor)
 S3method(as.character,AFNI_HRF)
 S3method(baseline_terms,fmri_model)
 S3method(blockids,convolved_term)
+S3method(blockids,event_model)
 S3method(blockids,event_term)
 S3method(blockids,sampling_frame)
 S3method(blocklens,event_model)
@@ -266,7 +267,6 @@ export(to_glt)
 export(trialwise)
 export(unit_contrast)
 export(write_glt)
-import(Matrix)
 import(RANN)
 import(assertthat)
 import(memoise)
