--- a/NAMESPACE
+++ b/NAMESPACE
@@ -117,9 +117,31 @@ S3method(onsets,convolved_term)
 S3method(onsets,event_term)
 S3method(onsets,regressor)
 S3method(parent_terms,event_term)
+S3method(plot,baseline_model)
+S3method(plot,event_model)
+S3method(plot,fmri_model)
+S3method(plot,regressor)
 S3method(predict,BSpline)
 S3method(predict,Ident)
 S3method(predict,Poly)
+S3method(print,afni_hrf_convolved_term)
+S3method(print,afni_lm_spec)
+S3method(print,baseline_model)
+S3method(print,contrast)
+S3method(print,contrast_diff_spec)
+S3method(print,contrast_set)
+S3method(print,contrast_spec)
+S3method(print,convolved_term)
+S3method(print,event_model)
+S3method(print,event_term)
+S3method(print,fmri_dataset)
+S3method(print,fmri_model)
+S3method(print,fmri_term)
+S3method(print,latent_dataset)
+S3method(print,matrix_dataset)
+S3method(print,poly_contrast_spec)
+S3method(print,regressor)
+S3method(print,sampling_frame)
 S3method(run,afni_lm_spec)
 S3method(samples,sampling_frame)
 S3method(shortnames,convolved_term)
@@ -229,29 +251,7 @@ export(onsets)
 export(pair_contrast)
 export(pairwise_contrasts)
 export(parent_terms)
-export(plot.baseline_model)
-export(plot.event_model)
-export(plot.fmri_model)
-export(plot.regressor)
 export(poly_contrast)
-export(print.afni_hrf_convolved_term)
-export(print.afni_lm_spec)
-export(print.baseline_model)
-export(print.contrast)
-export(print.contrast_diff_spec)
-export(print.contrast_set)
-export(print.contrast_spec)
-export(print.convolved_term)
-export(print.event_model)
-export(print.event_term)
-export(print.fmri_dataset)
-export(print.fmri_model)
-export(print.fmri_term)
-export(print.latent_dataset)
-export(print.matrix_dataset)
-export(print.poly_contrast_spec)
-export(print.regressor)
-export(print.sampling_frame)
 export(read_fmri_config)
 export(regressor)
 export(run)
