--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,10 +15,14 @@ S3method(blocklens,event_model)
 S3method(blocklens,fmri_model)
 S3method(blocklens,sampling_frame)
 S3method(cells,convolved_term)
+S3method(cells,covariate_convolved_term)
 S3method(cells,event_factor)
 S3method(cells,event_term)
 S3method(coef,fmri_latent_lm)
 S3method(coef,fmri_lm)
+S3method(columns,BSpline)
+S3method(columns,Ident)
+S3method(columns,Poly)
 S3method(columns,event_basis)
 S3method(columns,event_matrix)
 S3method(columns,event_seq)
@@ -96,6 +100,9 @@ S3method(is_categorical,event_seq)
 S3method(is_categorical,event_term)
 S3method(is_continuous,event_seq)
 S3method(is_continuous,event_term)
+S3method(levels,BSpline)
+S3method(levels,Ident)
+S3method(levels,Poly)
 S3method(levels,event_basis)
 S3method(levels,event_factor)
 S3method(levels,event_matrix)
@@ -117,31 +124,9 @@ S3method(onsets,convolved_term)
 S3method(onsets,event_term)
 S3method(onsets,regressor)
 S3method(parent_terms,event_term)
-S3method(plot,baseline_model)
-S3method(plot,event_model)
-S3method(plot,fmri_model)
-S3method(plot,regressor)
 S3method(predict,BSpline)
 S3method(predict,Ident)
 S3method(predict,Poly)
-S3method(print,afni_hrf_convolved_term)
-S3method(print,afni_lm_spec)
-S3method(print,baseline_model)
-S3method(print,contrast)
-S3method(print,contrast_diff_spec)
-S3method(print,contrast_set)
-S3method(print,contrast_spec)
-S3method(print,convolved_term)
-S3method(print,event_model)
-S3method(print,event_term)
-S3method(print,fmri_dataset)
-S3method(print,fmri_model)
-S3method(print,fmri_term)
-S3method(print,latent_dataset)
-S3method(print,matrix_dataset)
-S3method(print,poly_contrast_spec)
-S3method(print,regressor)
-S3method(print,sampling_frame)
 S3method(run,afni_lm_spec)
 S3method(samples,sampling_frame)
 S3method(shortnames,convolved_term)
@@ -251,7 +236,31 @@ export(onsets)
 export(pair_contrast)
 export(pairwise_contrasts)
 export(parent_terms)
+export(plot.baseline_model)
+export(plot.event_model)
+export(plot.fmri_model)
+export(plot.regressor)
 export(poly_contrast)
+export(print.afni_hrf_convolved_term)
+export(print.afni_lm_spec)
+export(print.baseline_model)
+export(print.chunkiter)
+export(print.contrast)
+export(print.contrast_diff_spec)
+export(print.contrast_set)
+export(print.contrast_spec)
+export(print.convolved_term)
+export(print.event_model)
+export(print.event_term)
+export(print.fmri_dataset)
+export(print.fmri_lm)
+export(print.fmri_model)
+export(print.fmri_term)
+export(print.latent_dataset)
+export(print.matrix_dataset)
+export(print.poly_contrast_spec)
+export(print.regressor)
+export(print.sampling_frame)
 export(read_fmri_config)
 export(regressor)
 export(run)
@@ -271,7 +280,6 @@ import(RANN)
 import(assertthat)
 import(memoise)
 import(neuroim2)
-import(pls)
 import(shiny)
 import(splines)
 import(stats)
@@ -287,6 +295,7 @@ importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(forecast,Arima)
 importFrom(forecast,auto.arima)
+importFrom(furrr,future_map)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,facet_wrap)
@@ -315,6 +324,8 @@ importFrom(purrr,map_dbl)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,partial)
+importFrom(rlang,enexpr)
+importFrom(rlang,enquos)
 importFrom(robustbase,lmrob)
 importFrom(robustbase,lmrob.control)
 importFrom(rrBLUP,mixed.solve)
@@ -324,3 +335,5 @@ importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,gather)
 importFrom(utils,combn)
+importFrom(utils,read.table)
+importFrom(utils,write.table)
