add get_data_matrix for fmri_file_dataset.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,9 @@ S3method(contrast_weights,pair_contrast_spec)
 S3method(contrast_weights,poly_contrast_spec)
 S3method(contrast_weights,unit_contrast_spec)
 S3method(convolve,event_term)
+S3method(correlation_map,baseline_model)
+S3method(correlation_map,event_model)
+S3method(correlation_map,fmri_model)
 S3method(data_chunks,fmri_mem_dataset)
 S3method(data_chunks,matrix_dataset)
 S3method(design_matrix,afni_hrf_convolved_term)
@@ -94,6 +97,7 @@ S3method(get_data,fmri_file_dataset)
 S3method(get_data,fmri_mem_dataset)
 S3method(get_data,latent_dataset)
 S3method(get_data,matrix_dataset)
+S3method(get_data_matrix,fmri_file_dataset)
 S3method(get_data_matrix,fmri_mem_dataset)
 S3method(get_data_matrix,matrix_dataset)
 S3method(get_formula,fmri_model)
@@ -198,6 +202,7 @@ S3method(terms,baseline_model)
 S3method(terms,event_model)
 S3method(terms,fmri_model)
 S3method(to_glt,contrast)
+export("heatmap,")
 export(AFNI_HRF)
 export(BSpline)
 export(EV)
@@ -215,10 +220,14 @@ export(HRF_SPMG3)
 export(Ident)
 export(Poly)
 export(Standardized)
+export(Visualize)
+export(a)
 export(afni_hrf)
 export(afni_lm)
 export(afni_trialwise)
 export(amplitudes)
+export(an)
+export(as)
 export(as.matrix_dataset)
 export(baseline)
 export(baseline_model)
@@ -238,15 +247,21 @@ export(convolve)
 export(convolve_block)
 export(convolve_design)
 export(convolve_event_term)
+export(correlation_map)
 export(covariate)
 export(create_event_model)
 export(create_hrf_object)
 export(data_chunks)
+export(design)
+export(design_map.baseline_model)
+export(design_map.event_model)
+export(design_map.fmri_model)
 export(design_matrix)
 export(design_plot)
 export(despike)
 export(durations)
 export(elements)
+export(entire)
 export(estcon)
 export(estimate_betas)
 export(estimate_contrast)
@@ -300,21 +315,27 @@ export(latent_dataset)
 export(levels)
 export(load_fmri_config)
 export(longnames)
+export(matrix)
 export(matrix_dataset)
 export(matrix_term)
 export(mixed_solve_cpp)
 export(multiresponse_bootstrap_lm)
 export(nbasis)
 export(nuisance)
+export(of)
 export(one_against_all_contrast)
 export(oneway_contrast)
 export(onsets)
+export(optional)
 export(pair_contrast)
 export(pairwise_contrasts)
+export(plot_contrasts.event_model)
 export(poly_contrast)
 export(r1_glm_betas)
 export(read_fmri_config)
 export(regressor)
+export(rescale_columns_01_to_neg1_pos1)
+export(rescaling)
 export(run)
 export(samples)
 export(sampling_frame)
@@ -329,14 +350,15 @@ export(split_onsets)
 export(stats)
 export(sub_basis)
 export(term_indices)
+export(the)
 export(trialwise)
 export(unit_contrast)
 export(vec_len)
+export(with)
 export(write_glt.glt_contrast)
 import(R6)
 import(RANN)
 import(assertthat)
-import(ggforce)
 import(ggplot2)
 import(memoise)
 import(stats)
@@ -353,7 +375,6 @@ importFrom(dplyr,select)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
 importFrom(furrr,future_map)
-importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_line)
