--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ S3method(blockids,event_term)
 S3method(blockids,sampling_frame)
 S3method(blocklens,event_model)
 S3method(blocklens,fmri_model)
+S3method(blocklens,matrix_dataset)
 S3method(blocklens,sampling_frame)
 S3method(cells,baseline_model)
 S3method(cells,convolved_term)
@@ -73,12 +74,10 @@ S3method(elements,event_basis)
 S3method(elements,event_matrix)
 S3method(elements,event_seq)
 S3method(elements,event_term)
-S3method(estcon,contrast)
 S3method(estimate_betas,fmri_dataset)
 S3method(estimate_betas,latent_dataset)
 S3method(estimate_betas,matrix_dataset)
 S3method(estimate_contrast,Fcontrast)
-S3method(estimate_contrast,contrast)
 S3method(evaluate,HRF)
 S3method(evaluate,null_regressor)
 S3method(evaluate,regressor)
@@ -255,9 +254,7 @@ export(design_plot)
 export(despike)
 export(durations)
 export(elements)
-export(estcon)
 export(estimate_betas)
-export(estimate_contrast)
 export(estimate_hrf)
 export(evaluate)
 export(event_basis)
@@ -313,10 +310,12 @@ export(matrix_term)
 export(mixed_solve_cpp)
 export(multiresponse_bootstrap_lm)
 export(nbasis)
+export(neural_input)
 export(nuisance)
 export(one_against_all_contrast)
 export(oneway_contrast)
 export(onsets)
+export(p_values)
 export(pair_contrast)
 export(pairwise_contrasts)
 export(plot_contrasts.event_model)
@@ -324,8 +323,8 @@ export(poly_contrast)
 export(r1_glm_betas)
 export(read_fmri_config)
 export(regressor)
+export(regressors)
 export(rescale_columns_01_to_neg1_pos1)
-export(run)
 export(samples)
 export(sampling_frame)
 export(shift)
@@ -336,6 +335,7 @@ export(simulate_fmri_noise)
 export(single_trial_regressor)
 export(split_by_block)
 export(split_onsets)
+export(standard_error)
 export(stats)
 export(sub_basis)
 export(term_indices)
