--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,8 @@ Imports:
     RcppArmadillo (>= 0.10.1.0),
     R6,
     splines,
-    crayon
+    crayon,
+    plotly
 RoxygenNote: 7.3.2.9000
 Roxygen: list(
     markdown = TRUE,
