--- a/NAMESPACE
+++ b/NAMESPACE
@@ -319,6 +319,7 @@ export(p_values)
 export(pair_contrast)
 export(pairwise_contrasts)
 export(plot_contrasts.event_model)
+export(plotly.event_model)
 export(poly_contrast)
 export(r1_glm_betas)
 export(read_fmri_config)
@@ -380,19 +381,25 @@ importFrom(neuroim2,FileBackedNeuroVec)
 importFrom(neuroim2,NeuroVecSeq)
 importFrom(neuroim2,series)
 importFrom(neuroim2,vectors)
+importFrom(plotly,animation_opts)
+importFrom(plotly,layout)
+importFrom(plotly,plot_ly)
 importFrom(pracma,conv)
 importFrom(purrr,imap)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,partial)
+importFrom(rlang,.data)
 importFrom(rlang,enexpr)
 importFrom(rlang,enquos)
 importFrom(splines,bs)
 importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
+importFrom(tidyr,complete)
 importFrom(tidyr,gather)
 importFrom(tidyr,pivot_longer)
 importFrom(utils,combn)
+importFrom(utils,head)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
 useDynLib(fmrireg)
