--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ S3method(construct,nuisancespec)
 S3method(construct,trialwisespec)
 S3method(contrast_weights,contrast_diff_spec)
 S3method(contrast_weights,contrast_formula_spec)
+S3method(contrast_weights,contrast_set)
 S3method(contrast_weights,convolved_term)
 S3method(contrast_weights,event_model)
 S3method(contrast_weights,fmri_model)
@@ -59,6 +60,9 @@ S3method(correlation_map,event_model)
 S3method(correlation_map,fmri_model)
 S3method(data_chunks,fmri_mem_dataset)
 S3method(data_chunks,matrix_dataset)
+S3method(design_map,baseline_model)
+S3method(design_map,event_model)
+S3method(design_map,fmri_model)
 S3method(design_matrix,afni_hrf_convolved_term)
 S3method(design_matrix,baseline_model)
 S3method(design_matrix,baseline_term)
@@ -139,6 +143,7 @@ S3method(plot,baseline_model)
 S3method(plot,event_model)
 S3method(plot,fmri_model)
 S3method(plot,regressor)
+S3method(plot_contrasts,event_model)
 S3method(predict,BSpline)
 S3method(predict,Ident)
 S3method(predict,Poly)
@@ -201,6 +206,7 @@ S3method(terms,baseline_model)
 S3method(terms,event_model)
 S3method(terms,fmri_model)
 S3method(to_glt,contrast)
+S3method(write_glt,glt_contrast)
 export(AFNI_HRF)
 export(BSpline)
 export(EV)
@@ -246,9 +252,7 @@ export(covariate)
 export(create_event_model)
 export(create_hrf_object)
 export(data_chunks)
-export(design_map.baseline_model)
-export(design_map.event_model)
-export(design_map.fmri_model)
+export(design_map)
 export(design_matrix)
 export(design_plot)
 export(despike)
@@ -281,6 +285,7 @@ export(gen_hrf)
 export(gen_hrf_blocked)
 export(gen_hrf_lagged)
 export(gen_hrf_set)
+export(get_data_matrix)
 export(global_onsets)
 export(hrf)
 export(hrf_blocked)
@@ -303,6 +308,7 @@ export(is_categorical)
 export(is_continuous)
 export(latent_dataset)
 export(levels)
+export(list_available_hrfs)
 export(load_fmri_config)
 export(longnames)
 export(matrix_dataset)
@@ -318,7 +324,7 @@ export(onsets)
 export(p_values)
 export(pair_contrast)
 export(pairwise_contrasts)
-export(plot_contrasts.event_model)
+export(plot_contrasts)
 export(plotly.event_model)
 export(poly_contrast)
 export(r1_glm_betas)
@@ -330,9 +336,10 @@ export(samples)
 export(sampling_frame)
 export(shift)
 export(shortnames)
-export(sim_ts)
-export(simulate_fmri_dataset)
-export(simulate_fmri_noise)
+export(simulate_bold_signal)
+export(simulate_fmri_matrix)
+export(simulate_noise_vector)
+export(simulate_simple_dataset)
 export(single_trial_regressor)
 export(split_by_block)
 export(split_onsets)
@@ -340,10 +347,11 @@ export(standard_error)
 export(stats)
 export(sub_basis)
 export(term_indices)
+export(to_glt)
 export(trialwise)
 export(unit_contrast)
 export(vec_len)
-export(write_glt.glt_contrast)
+export(write_glt)
 import(R6)
 import(RANN)
 import(assertthat)
@@ -355,6 +363,18 @@ importFrom(Matrix,t)
 importFrom(R6,R6Class)
 importFrom(Rcpp,evalCpp)
 importFrom(assertthat,assert_that)
+importFrom(bidser,bids_project)
+importFrom(bidser,participants)
+importFrom(bidser,read_confounds)
+importFrom(bidser,read_events)
+importFrom(bidser,tasks)
+importFrom(crayon,blue)
+importFrom(crayon,bold)
+importFrom(crayon,cyan)
+importFrom(crayon,green)
+importFrom(crayon,italic)
+importFrom(crayon,red)
+importFrom(crayon,yellow)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,do)
 importFrom(dplyr,group_by)
@@ -362,6 +382,9 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
+importFrom(fs,dir_exists)
+importFrom(fs,file_exists)
+importFrom(fs,path_expand)
 importFrom(furrr,future_map)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,facet_wrap)
@@ -386,13 +409,22 @@ importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
 importFrom(pracma,conv)
 importFrom(purrr,imap)
+importFrom(purrr,map)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,partial)
+importFrom(purrr,set_names)
 importFrom(rlang,.data)
 importFrom(rlang,enexpr)
 importFrom(rlang,enquos)
 importFrom(splines,bs)
+importFrom(stats,arima.sim)
+importFrom(stats,na.omit)
+importFrom(stats,rexp)
+importFrom(stats,rgamma)
+importFrom(stats,rlnorm)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
 importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,complete)
@@ -402,4 +434,5 @@ importFrom(utils,combn)
 importFrom(utils,head)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
+importFrom(yaml,read_yaml)
 useDynLib(fmrireg)
