--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,8 @@ S3method(columns,event)
 S3method(conditions,afni_hrf_convolved_term)
 S3method(conditions,afni_trialwise_convolved_term)
 S3method(conditions,baseline_model)
+S3method(conditions,baseline_term)
+S3method(conditions,convolved_term)
 S3method(conditions,event_model)
 S3method(conditions,event_term)
 S3method(conditions,fmri_model)
@@ -82,6 +84,7 @@ S3method(estimate_betas,matrix_dataset)
 S3method(estimate_contrast,Fcontrast)
 S3method(evaluate,HRF)
 S3method(evaluate,Reg)
+S3method(event_table,convolved_term)
 S3method(event_table,covariate_convolved_term)
 S3method(event_table,event_term)
 S3method(event_terms,fmri_model)
@@ -129,6 +132,7 @@ S3method(nbasis,RobustScale)
 S3method(nbasis,Scale)
 S3method(nbasis,ScaleWithin)
 S3method(nbasis,Standardized)
+S3method(nbasis,convolved_term)
 S3method(nbasis,covariate_convolved_term)
 S3method(nbasis,hrfspec)
 S3method(onsets,Reg)
@@ -189,6 +193,7 @@ S3method(sub_basis,RobustScale)
 S3method(sub_basis,Scale)
 S3method(sub_basis,ScaleWithin)
 S3method(sub_basis,Standardized)
+S3method(term_indices,event_model)
 S3method(term_matrices,fmri_model)
 S3method(term_names,baseline_model)
 S3method(term_names,event_model)
