Use rlang parse_expr and eval_tidy for covariate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -425,6 +425,7 @@ importFrom(rlang,enexpr)
 importFrom(rlang,enquos)
 importFrom(rlang,env_bury)
 importFrom(rlang,eval_tidy)
+importFrom(rlang,parse_expr)
 importFrom(rlang,expr)
 importFrom(rlang,f_env)
 importFrom(rlang,f_lhs)
