--- a/NAMESPACE
+++ b/NAMESPACE
@@ -348,6 +348,7 @@ export(trialwise)
 export(unit_contrast)
 export(vec_len)
 export(write_glt)
+export(parse_yaml_to_list)
 import(R6)
 import(assertthat)
 import(cli)
