Implement ValidationErrors R6 class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -470,3 +470,4 @@ importFrom(utils,modifyList)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
 useDynLib(fmrireg)
+export(ValidationErrors)
