Add HRF basis utilities

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -471,3 +471,8 @@ importFrom(utils,read.table)
 importFrom(utils,write.table)
 useDynLib(fmrireg)
 export(ValidationErrors)
+export(reconstruction_matrix)
+S3method(reconstruction_matrix,HRF)
+export(penalty_matrix)
+S3method(penalty_matrix,HRF)
+export(project_confounds)
