Add CFALS wrapper function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -476,3 +476,4 @@ S3method(reconstruction_matrix,HRF)
 export(penalty_matrix)
 S3method(penalty_matrix,HRF)
 export(project_confounds)
+export(fmrireg_hrf_cfals)
