Implement CFALS output object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -477,3 +477,8 @@ export(penalty_matrix)
 S3method(penalty_matrix,HRF)
 export(project_confounds)
 export(fmrireg_hrf_cfals)
+
+S3method(print,fmrireg_cfals_fit)
+S3method(summary,fmrireg_cfals_fit)
+S3method(residuals,fmrireg_cfals_fit)
+S3method(plot,fmrireg_cfals_fit)
