--- a/NAMESPACE
+++ b/NAMESPACE
@@ -478,6 +478,7 @@ S3method(penalty_matrix,HRF)
 export(project_confounds)
 export(create_fmri_design)
 export(fmrireg_hrf_cfals)
+export(fmrireg_cfals)
 
 S3method(print,fmrireg_cfals_fit)
 S3method(summary,fmrireg_cfals_fit)
