--- a/NAMESPACE
+++ b/NAMESPACE
@@ -200,6 +200,12 @@ export(AFNI_HRF)
 export(BSpline)
 export(Fcontrasts)
 export(HRF)
+export(HRF_BSPLINE)
+export(HRF_GAMMA)
+export(HRF_GAUSSIAN)
+export(HRF_SPMG1)
+export(HRF_SPMG2)
+export(HRF_SPMG3)
 export(Ident)
 export(Poly)
 export(RobustScale)
@@ -344,7 +350,6 @@ importFrom(Matrix,rowSums)
 importFrom(Matrix,t)
 importFrom(Rcpp,evalCpp)
 importFrom(assertthat,assert_that)
-importFrom(base,substitute)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_div)
 importFrom(cli,cli_end)
